feat(all): add htnl

--- a/style.css
+++ b/style.css
@@ -1,7 +1,82 @@
-h1 {
-    background-color: blanchedalmond;
+* {
+    box-sizing: border-box;
 }
 
-ul , ol {
-    border: em;
+body {
+    line-height: 1.7em;
+    font-weight: 500;
+    -webkit-font-smoothing: antialiased;
+    color: #222;
+    font-family: 'Droid Serif',sans-serif;
+}
+
+article {
+    display: block;
+    opacity: 1;
+    margin-right: 0;
+    margin-bottom: 11.5%;
+    width: 100%;
+    border: 1px solid #d8d8d8;
+    padding: 19px;
+    background-color: #fff;
+    word-wrap: break-word;
+    box-sizing: border-box;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+    font-family: 'Droid Serif',sans-serif;
+    color: #222;
+    line-height: 1.7em;
+    font-weight: 500;
+    -webkit-font-smoothing: antialiased;
+}
+
+.first {
+    display: block;
+    box-sizing: border-box;
+    position: relative;
+    margin: -20px -20px 29px;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    vertical-align: baseline;
+    background: transparent;
+    word-wrap: break-word;
+}
+
+.image {
+    text-decoration: none;
+    cursor: pointer;
+    word-wrap: break-word;
+    display: block;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+img {
+    min-width: 100%;
+    max-width: 100%;
+    height: auto;
+    vertical-align: bottom;
+    width: 400px;
+    aspect-ratio: auto 400 / 250;
+    word-wrap: break-word;
+}
+
+h2 {
+    font-size: 16px;
+    padding-bottom: 0;
+    line-height: 1em;
+    font-weight: 500;
+    vertical-align: baseline;
+    background: transparent;
+    -webkit-font-smoothing: antialiased;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    text-decoration: none;
 }
