--- a/css_cardtest.css
+++ b/css_cardtest.css
@@ -1,38 +1,67 @@
 /* General styles - put these straight into your stylesheet */
-
 body {
-    margin: 0;
-  }
-  
-html {
-    font-family: 'Helvetica neue', Arial, 'sans serif';
-    font-size: 10px;
-    background-color: #ccc;
-  }
-  
-  /* Selectors to be matched up with rulesets */
-  /* Rulesets to be matched up with selectors */
-  
-.card {
-    width: 35em;
-    height: 22em;
-    margin: 5em auto;
-    background-color: red;
-    border: 0.2em solid black;
-    border-radius: 1.5em;
-  }
+  margin: 0;
+}
 
-.card footer {
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
-    border-radius: 1.5em 1.5em 0 0;
-  }
+html {
+  font-family: "Helvetica neue", Arial, "sans serif";
+  font-size: 10px;
+  background-color: #ccc;
+}
+
+h2, p {
+    margin: 0;
+}
+
+article p {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Selectors to be matched up with rulesets */
+
+/* .card article img
+  .card footer
+  .card header
+  .card */
+
+/* Rulesets to be matched up with selectors */
+
+section {
+  width: 35em;
+  height: 22em;
+  margin: 5em auto;
+  background-color: red;
+  border: 0.2em solid black;
+  border-radius: 1.5em;
+}
 
 .card header {
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
-    border-radius: 0 0 1.5em 1.5em;
-  }
-  
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
+  border-radius: 1.5em 1.5em 0 0;
+  content: 3em;
+    padding: 1em;
+}
+
+.card footer {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.5)
+  );
+  border-radius: 0 0 1.5em 1.5em;
+  content: 3em;
+    padding: 1em;
+}
+
 .card article img {
-    height: 50%
     float: right;
+    max-width: 100%;
+}
+
+img p {
+    width: 35em;
 }
